--- a/src/sass/page-sections/_get-in-touch.scss
+++ b/src/sass/page-sections/_get-in-touch.scss
@@ -6,13 +6,26 @@
 
     .container {
         display: grid;
+        grid-template-columns: 1fr;
+
+        width: 100%;
+        max-width: var(--site-width);
+        padding-left: var(--site-pad-small);
+        padding-right: var(--site-pad-small);
+        margin-left: auto;
+        margin-right: auto;
+
+        @media (min-width: 880px) {
+            padding-left: var(--site-pad-large);
+            padding-right: var(--site-pad-large);
+        }
     }
 
-    // layout media queries --------------------------------------------------
+    // layout: media queries --------------------------------------------------
     @media (min-width: 800px) {
         .container {
             grid-template-columns: repeat(12, 1fr);
-            grid-gap: 48px;
+            grid-gap: var(--gutter-large);
         }
 
         .image {
@@ -20,7 +33,7 @@
             align-self: end;
         }
 
-        .text {
+        .rich-text {
             grid-column: 7 / -1;
         }
     }
@@ -31,13 +44,13 @@
             align-self: end;
         }
 
-        .text {
+        .rich-text {
             grid-column: 7 / 11;
         }
     }
 
     // style elements --------------------------------------------------
-    .text {
+    .rich-text {
         .title {
             margin-bottom: var(--drop-small);
             font-size: var(--font-base-plus);
@@ -71,16 +84,17 @@
         margin-bottom: 2rem;
     }
 
-    .input-email {
-        width: 70%;
+    input {
         height: 52px;
         border: 1.5px solid var(--black);
     }
 
+    .input-email {
+        width: 70%;
+    }
+
     .input-subscribe {
         width: 28%;
-        height: 52px;
-        border: 1.5px solid var(--black);
         background-color: transparent;
     }
 }
