--- a/src/sass/page-sections/_banner.scss
+++ b/src/sass/page-sections/_banner.scss
@@ -5,8 +5,8 @@
     width: 100%;
     padding-top: 4rem;
     padding-bottom: 5rem;
-    padding-left: var(--site-pad);
-    padding-right: var(--site-pad);
+    padding-left: var(--site-pad-large);
+    padding-right: var(--site-pad-large);
     background-color: var(--off-white);
 
     @media (min-width: 880px) {
@@ -19,13 +19,13 @@
         max-width: 1296px;
         margin: 0 auto;
         font-family: var(--titling);
-        font-size: 1.375rem;
+        font-size: 1.75rem; // 28px
         font-weight: 400;
-        line-height: 1.375;
+        line-height: var(--lh-medium);
 
         @media (min-width: 320px) {
             --a: 28;
-            --b: 80;
+            --b: 72;
             --x: 320;
             --y: 1120;
             --sum1: calc((var(--b) - var(--a)) / (var(--y) - var(--x)));
@@ -36,7 +36,7 @@
         }
 
         @media (min-width: 1120px) {
-            font-size: 5rem;
+            font-size: var(--font-large);
         }
     }
 }
