--- a/src/sass/post-types/work.scss
+++ b/src/sass/post-types/work.scss
@@ -141,7 +141,7 @@
 
     // flexible content styles -----------------------------------------------------------------------------
     // shared styles -----------------------------------------------------------------------------
-    .flexible-content {
+    .flexible-content__case-study {
         padding-top: 6rem;
         background-color: var(--off-white);
     }
@@ -159,43 +159,58 @@
     .primary-media {
         width: 100%;
         max-width: var(--site-width);
-        padding-left: 1.5rem;
-        padding-right: 1.5rem;
+        padding-left: var(--site-pad-small);
+        padding-right: var(--site-pad-small);
         margin-left: auto;
         margin-right: auto;
 
         @media (min-width: 880px) {
-            padding-left: 4.5rem;
-            padding-right: 4.5rem;
+            padding-left: var(--site-pad-large);
+            padding-right: var(--site-pad-large);
+        }
+    }
+
+    .container {
+        width: 100%;
+        max-width: 1440px;
+        padding: 1.5rem 4.5rem 0 4.5rem;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: 1fr;
+
+        @media (min-width: 800px) {
+            grid-template-columns: repeat(12, 1fr);
+            grid-column-gap: 48px;
         }
     }
 
     // specific flexible content styles ---------------------------------------------------------
-    // text-row ---------------------------------------------------------------------
-    .sector-info {
+    // text ---------------------------------------------------------------------
+    .rich-text {
         display: flex;
         justify-content: center;
 
-        .container {
-            width: 100%;
+        .container__centered {
             max-width: 1296px;
             padding-top: 1.5rem;
             border-top: 1.5px solid var(--mid-black);
-            margin-left: 4.5rem;
-            margin-right: 4.5rem;
+            margin-left: var(--site-pad-large);
+            margin-right: var(--site-pad-large);
             display: grid;
             grid-template-columns: 1fr;
 
             @media (min-width: 800px) {
                 grid-template-columns: repeat(12, 1fr);
+                grid-column-gap: var(--gutter-large);
             }
         }
 
-        .lh-col {
+        .title {
             grid-column: 1 / 7;
+            grid-row: 1;
         }
 
-        .rh-col {
+        .text {
             grid-column: 9 / -1;
 
             p {
@@ -210,20 +225,6 @@
         margin-top: var(--site-space-lg);
         margin-bottom: var(--site-space-lg);
         background-color: var(--white);
-
-        .container {
-            width: 100%;
-            max-width: 1440px;
-            padding: 1.5rem 4.5rem 0 4.5rem;
-            margin: 0 auto;
-            display: grid;
-            grid-template-columns: 1fr;
-
-            @media (min-width: 800px) {
-                grid-template-columns: repeat(12, 1fr);
-                grid-column-gap: 48px;
-            }
-        }
 
         .author-meta {
             padding-top: var(--site-space-sm);
