Work [individual case-study] blocks - php and variables check and amends

--- a/src/sass/post-types/work.scss
+++ b/src/sass/post-types/work.scss
@@ -352,5 +352,10 @@
         width: 100%;
         max-width: 1920px;
         margin: 0 auto;
+
+        video,
+        figure {
+            margin-bottom: var(--drop-medium);
+        }
     }
 }
