Basic styles set-up for work landing page rows

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -23,6 +23,8 @@
 @use 'pages/our-work';
 @use 'pages/error-404';
 
+@use 'pages/test';
+
 //// page-sections
 @use 'page-sections/banner';
 @use 'page-sections/get-in-touch';
