--- a/src/sass/flx/_work-v1.0.scss
+++ b/src/sass/flx/_work-v1.0.scss
@@ -10,7 +10,7 @@
         //grid-auto-flow: dense;
     }
 
-    .grid-item {
+    li {
         position: relative;
         margin-bottom: 2rem;
         grid-column: span 12;
@@ -36,24 +36,6 @@
                 grid-row: span 2;
             }
         }
-
-        &.tall {
-            grid-column: span 12;
-
-            @media (min-width: 768px) {
-                grid-column: span 6;
-                grid-row: span 2;
-            }
-
-            @media (min-width: 960px) {
-                grid-column: span 4;
-            }
-        }
-
-        &.full {
-            grid-column: span 12;
-            grid-row: span 2;
-        }
     }
 
     img {
@@ -62,163 +44,49 @@
     }
 }
 
-.row-4-4-empty,
-.row-8-4,
-.row-empty-8,
-.row-4-tall-empty,
-.row-empty-4-4,
-.row-empty-tall-4,
-.row-8-empty,
-.row-4-8 {
-    margin-bottom: 96px;
-
-    img {
+/* curated grid */
+.our-work__featured {
+    .image img {
         width: 100%;
     }
 
-    // @media (min-width: 600px) {
-    @media (min-width: 600px) {
-        display: grid;
-        grid-template-columns: repeat(12, 1fr);
-        grid-gap: 48px;
-
+    .lh-col,
+    .rh-col,
+    .three-columns {
         article {
             grid-column: 1 / -1;
         }
     }
-}
 
-@media (min-width: 768px) {
-    .row-4-4-empty {
-        article {
-            grid-column: auto / span 6;
-        }
-    }
-
-    .row-8-4 {
-        article:nth-of-type(1) {
-            height: 700px;
-            grid-column: auto / span 8;
-        }
-        article:nth-of-type(2) {
-            display: none;
-        }
-    }
-
-    .row-empty-8 {
-        article {
-            grid-column: 5 / -1;
-        }
-    }
-
-    .row-4-tall-empty {
-        article:nth-of-type(1) {
-            grid-column: 1 / 7;
+    @media (min-width: 960px) {
+        .lh-col {
+            article:nth-of-type(1) {
+                grid-column: 1 / 9;
+            }
+            article:nth-of-type(2) {
+                grid-column: 9 / -1;
+            }
         }
 
-        article:nth-of-type(2) {
-            height: 600px;
-            grid-column: 7 / 13;
-        }
-    }
-
-    .row-empty-4-4 {
-        article:nth-of-type(1) {
-            grid-column: 1 / 7;
+        .rh-col {
+            article:nth-of-type(1) {
+                grid-column: 1 / 5;
+            }
+            article:nth-of-type(2) {
+                grid-column: 5 / -1;
+            }
         }
 
-        article:nth-of-type(2) {
-            grid-column: 7 / 13;
-        }
-    }
-
-    .row-empty-tall-4 {
-        article:nth-of-type(1) {
-            height: 700px;
-            grid-column: 1 / 7;
-        }
-
-        article:nth-of-type(2) {
-            grid-column: 7 / 13;
-        }
-    }
-
-    .row-8-empty {
-        article {
-            grid-column: 1 / 9;
-        }
-    }
-}
-
-@media (min-width: 960px) {
-    .row-4-4-empty {
-        article {
-            grid-column: auto / span 4;
-        }
-    }
-
-    .row-8-4 {
-        article:nth-of-type(1) {
-            grid-column: auto / span 8;
-        }
-        article:nth-of-type(2) {
-            grid-column: auto / span 4;
-        }
-    }
-
-    .row-empty-8 {
-        article {
-            grid-column: 5 / -1;
-        }
-    }
-
-    .row-4-tall-empty {
-        article:nth-of-type(1) {
-            height: 700px;
-            grid-column: 1 / 5;
-        }
-
-        article:nth-of-type(2) {
-            height: 600px;
-            grid-column: 5 / 9;
-        }
-    }
-
-    .row-empty-4-4 {
-        article:nth-of-type(1) {
-            grid-column: 5 / 9;
-        }
-
-        article:nth-of-type(2) {
-            grid-column: 9 / 13;
-        }
-    }
-
-    .row-empty-tall-4 {
-        article:nth-of-type(1) {
-            height: 700px;
-            grid-column: 5 / 9;
-        }
-
-        article:nth-of-type(2) {
-            grid-column: 9 / 13;
-        }
-    }
-
-    .row-8-empty {
-        article {
-            grid-column: 1 / 9;
-        }
-    }
-
-    .row-4-8 {
-        article:nth-of-type(1) {
-            grid-column: 1 / 5;
-        }
-
-        article:nth-of-type(2) {
-            height: 700px;
-            grid-column: 5 / 13;
+        .three-columns {
+            article:nth-of-type(1) {
+                grid-column: 1 / 5;
+            }
+            article:nth-of-type(2) {
+                grid-column: 5 / 9;
+            }
+            article:nth-of-type(3) {
+                grid-column: 9 / -1;
+            }
         }
     }
 }
