--- a/src/sass/flx/_work-v1.0.scss
+++ b/src/sass/flx/_work-v1.0.scss
@@ -50,6 +50,10 @@
         width: 100%;
     }
 
+    .full-width {
+        margin-bottom: var(--drop-big);
+    }
+
     .lh-col,
     .rh-col,
     .three-columns {
@@ -59,9 +63,16 @@
     }
 
     @media (min-width: 960px) {
+        grid-template-rows: 2;
+
         .lh-col {
             article:nth-of-type(1) {
                 grid-column: 1 / 9;
+
+                .details {
+                    grid-column: 1 / 9;
+                    grid-row: 2 / 3;
+                }
             }
             article:nth-of-type(2) {
                 grid-column: 9 / -1;
