Our-work FC titling styles updated

--- a/src/sass/flx/_work-v1.0.scss
+++ b/src/sass/flx/_work-v1.0.scss
@@ -50,6 +50,17 @@
         width: 100%;
     }
 
+    .meta {
+        font-size: var(--font-base-plus);
+        color: var(--mid-black);
+    }
+
+    .link {
+        font-family: 'cabinet-medium';
+        font-size: var(--font-base-plus);
+        color: var(--black);
+    }
+
     .full-width {
         margin-bottom: var(--drop-big);
     }
