--- a/src/sass/flx/_work-v1.0.scss
+++ b/src/sass/flx/_work-v1.0.scss
@@ -8,6 +8,12 @@
         //grid-template-rows: auto;
         grid-column-gap: 48px;
         //grid-auto-flow: dense;
+
+        .link {
+            font-family: 'cabinet-medium';
+            font-size: var(--font-base-plus);
+            color: var(--black);
+        }
     }
 
     li {
