Footer: mark-up and variables updated, header, lh and rh cols styled

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -27,6 +27,7 @@
     // --titling: 'qt-optimum';
     --titling: 'cabinet';
     --copy: 'satoshi-regular', sans-serif;
+    --copy-med: 'satoshi-medium', sans-serif;
 
     // font sizes
     --font-small: 1rem; // 16px - small body text, text & cta link
@@ -47,7 +48,7 @@
     --lh-base: 1;
     --lh-small: 1.2;
     --lh-medium: 1.35;
-    //    --lh-large: ;
+    --lh-large: 1.5;
 
     /* Layout
     ---------------------------------------------------------------------------------------------------------------- */
