--- a/src/sass/type/_fonts.scss
+++ b/src/sass/type/_fonts.scss
@@ -35,3 +35,12 @@
     font-display: swap;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'satoshi-medium';
+    src: url('../../fonts/satoshi/Satoshi-Medium.woff2') format('woff2'),
+        url('../../fonts/satoshi/Satoshi-Medium.woff') format('woff');
+    font-weight: 500;
+    font-display: swap;
+    font-style: normal;
+}
