Member logo and copyright / policy sections added to footer

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -26,6 +26,7 @@
     // typefaces
     // --titling: 'qt-optimum';
     --titling: 'cabinet';
+    --titling-med: 'cabinet-medium';
     --copy: 'satoshi-regular', sans-serif;
     --copy-med: 'satoshi-medium', sans-serif;
 
