Compiler bug fixed [AOS init() removed from src and placed in footer], basic nav toggle set-up and working on desktop

--- a/src/sass/partials/_navigation.scss
+++ b/src/sass/partials/_navigation.scss
@@ -7,10 +7,10 @@
 
 .primary-nav {
     //margin-bottom: 6px;
-    display: flex;
+    display: none;
 
     &.show-nav {
-        //display: block;
+        display: flex;
     }
 
     li {
