--- a/src/sass/flx/_who-we-are.scss
+++ b/src/sass/flx/_who-we-are.scss
@@ -256,4 +256,123 @@
             }
         }
     }
+
+    /* image-grid-partners
+    ------------------------------------------------------------------------- */
+    .partners {
+        padding-top: 110px;
+        padding-bottom: 68px;
+
+        &.black {
+            background-color: var(--black);
+
+            .title,
+            p {
+                color: var(--white);
+            }
+        }
+
+        &.white {
+            background-color: var(--white);
+
+            .title,
+            p {
+                color: var(--black);
+            }
+        }
+
+        .introduction {
+            display: grid;
+            grid-template-columns: 1fr;
+            margin-bottom: 115px;
+        }
+
+        .title {
+            font-size: var(--font-medium);
+        }
+
+        @media (min-width: 880px) {
+            .introduction {
+                grid-template-columns: repeat(12, 1fr);
+                grid-gap: 48px;
+            }
+
+            .title {
+                grid-column: 1 / 4;
+                grid-row: 1 / -1;
+            }
+
+            p {
+                grid-column: 8 / -1;
+                grid-row: 1 / -1;
+            }
+        }
+
+        .image-bank {
+            display: grid;
+            grid-template-columns: 1fr;
+            margin-bottom: 3rem;
+
+            @media (min-width: 880px) {
+                grid-template-columns: repeat(12, 1fr);
+                grid-gap: 48px;
+
+                .lh-col {
+                    grid-column: 1 / 7;
+                }
+                .rh-col {
+                    grid-column: 8 / -1;
+                }
+            }
+
+            h3 {
+                margin-bottom: 1.25rem;
+                font-size: var(--font-base-plus);
+                text-transform: uppercase;
+                color: var(--mid-black);
+            }
+
+            .lh-images {
+                @media (min-width: 880px) {
+                    display: grid;
+                    grid-template-columns: repeat(6, 1fr);
+                    column-gap: var(--gutter-large);
+
+                    .image {
+                        grid-column: span 2;
+                        align-items: center;
+                    }
+
+                    .image:nth-of-type(4n) {
+                        justify-self: start;
+                    }
+
+                    .image:nth-of-type(3n),
+                    .image:nth-of-type(6n) {
+                        justify-self: center;
+                    }
+                }
+            }
+
+            .rh-images {
+                @media (min-width: 880px) {
+                    display: grid;
+                    grid-template-columns: repeat(5, 1fr);
+                    column-gap: var(--gutter-large);
+
+                    .image:nth-of-type(1n) {
+                        grid-column: 1 / 4;
+                    }
+
+                    .image:nth-of-type(2n) {
+                        grid-column: 4 / 6;
+                    }
+
+                    .image:nth-of-type(4n) {
+                        justify-self: start;
+                    }
+                }
+            }
+        }
+    }
 }
