--- a/src/sass/flx/_who-we-are.scss
+++ b/src/sass/flx/_who-we-are.scss
@@ -58,6 +58,7 @@
         @media (min-width: 880px) {
             display: grid;
             grid-template-columns: repeat(12, 1fr);
+            column-gap: var(--gutter-large);
         }
 
         .inner {
@@ -131,9 +132,9 @@
         }
 
         .image {
-            grid-column: 1 / 5;
+            grid-column: 1 / 4;
             grid-row: 1 / 2;
-            justify-self: start;
+            justify-self: end;
         }
     }
 
@@ -165,54 +166,31 @@
         }
     }
 
-    /* image-grid
+    /* image-grid four cols
     ------------------------------------------------------------------------- */
-    .image-grid {
+    .four-cols {
         padding-top: 96px;
-
-        &.black {
-            background-color: var(--black);
-
-            .title,
-            p {
-                color: var(--white);
-            }
-        }
-
-        &.white {
-            background-color: var(--white);
-
-            .title,
-            p {
-                color: var(--black);
-            }
-        }
+        background-color: var(--black);
 
         .introduction {
-            display: grid;
-            grid-template-columns: 1fr;
-            margin-bottom: 3rem;
+            display: flex;
+            flex-direction: column;
+
+            color: var(--white);
+
+            @media (min-width: 960px) {
+                flex-direction: row;
+                justify-content: space-between;
+            }
         }
 
         .title {
             font-size: var(--font-medium);
         }
 
-        @media (min-width: 880px) {
-            .introduction {
-                grid-template-columns: repeat(12, 1fr);
-                grid-gap: 48px;
-            }
-
-            .title {
-                grid-column: 1 / 4;
-                grid-row: 1 / -1;
-            }
-
-            p {
-                grid-column: 8 / -1;
-                grid-row: 1 / -1;
-            }
+        p {
+            width: 39.5%;
+            max-width: 512px;
         }
 
         .images {
@@ -220,95 +198,73 @@
             display: grid;
             grid-template-columns: 1fr;
 
-            .image {
-                margin-bottom: 4rem;
-                justify-self: center;
+            @media (min-width: 520px) {
+                grid-template-columns: repeat(12, 1fr);
+                column-gap: var(--gutter-large);
             }
         }
 
-        @media (min-width: 520px) {
-            .images {
-                grid-template-columns: repeat(12, 1fr);
-            }
+        .image {
+            margin-bottom: 4rem;
+            justify-self: center;
 
-            .image {
+            @media (min-width: 520px) {
                 grid-column: span 6;
             }
-        }
 
-        @media (min-width: 960px) {
-            .image {
+            @media (min-width: 960px) {
                 grid-column: span 4;
             }
-        }
 
-        @media (min-width: 1120px) {
-            .image {
+            @media (min-width: 1120px) {
                 grid-column: span 3;
-            }
 
-            .image:nth-of-type(4n + 1) {
-                justify-self: start;
-            }
+                &:nth-of-type(4n + 1) {
+                    justify-self: start;
+                }
 
-            .image:nth-of-type(4n) {
-                justify-self: end;
+                &:nth-of-type(4n) {
+                    justify-self: end;
+                }
             }
         }
     }
 
-    /* image-grid-partners
+    /* image-grid five cols
     ------------------------------------------------------------------------- */
-    .partners {
-        padding-top: 110px;
-        padding-bottom: 68px;
-
-        &.black {
-            background-color: var(--black);
-
-            .title,
-            p {
-                color: var(--white);
-            }
-        }
-
-        &.white {
-            background-color: var(--white);
-
-            .title,
-            p {
-                color: var(--black);
-            }
-        }
+    .five-cols {
+        padding-top: 6.875rem;
+        padding-bottom: 4.25rem;
+        background-color: var(--white);
 
         .introduction {
-            display: grid;
-            grid-template-columns: 1fr;
-            margin-bottom: 115px;
+            margin-bottom: 7.25rem;
+            display: flex;
+            flex-direction: column;
+
+            @media (min-width: 960px) {
+                flex-direction: row;
+                justify-content: space-between;
+            }
         }
 
-        .title {
+        .section-title {
             font-size: var(--font-medium);
         }
 
-        @media (min-width: 880px) {
-            .introduction {
-                grid-template-columns: repeat(12, 1fr);
-                grid-gap: 48px;
-            }
-
-            .title {
-                grid-column: 1 / 4;
-                grid-row: 1 / -1;
-            }
-
-            p {
-                grid-column: 8 / -1;
-                grid-row: 1 / -1;
-            }
+        p {
+            width: 39.5%;
+            max-width: 512px;
         }
 
-        .image-bank {
+        .sub-title {
+            margin-bottom: 1.25rem;
+            font-size: var(--font-base-plus);
+            text-transform: uppercase;
+            color: var(--mid-black);
+        }
+
+        .images {
             display: grid;
             grid-template-columns: 1fr;
             margin-bottom: 3rem;
@@ -316,61 +272,59 @@
             @media (min-width: 880px) {
                 grid-template-columns: repeat(12, 1fr);
                 grid-gap: 48px;
+            }
+        }
 
-                .lh-col {
-                    grid-column: 1 / 7;
+        .lh-col {
+            grid-column: 1 / 7;
+        }
+
+        .rh-col {
+            grid-column: 8 / -1;
+        }
+
+        .lh-col__images,
+        .rh-col__images {
+            @media (min-width: 880px) {
+                display: grid;
+                column-gap: var(--gutter-large);
+            }
+        }
+
+        .lh-col__images {
+            @media (min-width: 880px) {
+                grid-template-columns: repeat(6, 1fr);
+
+                .image {
+                    grid-column: span 2;
+                    align-items: center;
                 }
-                .rh-col {
-                    grid-column: 8 / -1;
+
+                .image:nth-of-type(4n) {
+                    justify-self: start;
+                }
+
+                .image:nth-of-type(3n),
+                .image:nth-of-type(6n) {
+                    justify-self: center;
                 }
             }
+        }
 
-            h3 {
-                margin-bottom: 1.25rem;
-                font-size: var(--font-base-plus);
-                text-transform: uppercase;
-                color: var(--mid-black);
-            }
+        .rh-col__images {
+            @media (min-width: 880px) {
+                grid-template-columns: repeat(5, 1fr);
 
-            .lh-images {
-                @media (min-width: 880px) {
-                    display: grid;
-                    grid-template-columns: repeat(6, 1fr);
-                    column-gap: var(--gutter-large);
-
-                    .image {
-                        grid-column: span 2;
-                        align-items: center;
-                    }
-
-                    .image:nth-of-type(4n) {
-                        justify-self: start;
-                    }
-
-                    .image:nth-of-type(3n),
-                    .image:nth-of-type(6n) {
-                        justify-self: center;
-                    }
+                .image:nth-of-type(1n) {
+                    grid-column: 1 / 4;
                 }
-            }
 
-            .rh-images {
-                @media (min-width: 880px) {
-                    display: grid;
-                    grid-template-columns: repeat(5, 1fr);
-                    column-gap: var(--gutter-large);
+                .image:nth-of-type(2n) {
+                    grid-column: 4 / 6;
+                }
 
-                    .image:nth-of-type(1n) {
-                        grid-column: 1 / 4;
-                    }
-
-                    .image:nth-of-type(2n) {
-                        grid-column: 4 / 6;
-                    }
-
-                    .image:nth-of-type(4n) {
-                        justify-self: start;
-                    }
+                .image:nth-of-type(4n) {
+                    justify-self: start;
                 }
             }
         }
