--- a/src/sass/tools/_utilities.scss
+++ b/src/sass/tools/_utilities.scss
@@ -30,6 +30,20 @@
     }
 }
 
+// center content with a max-width of 1440px
+.container {
+    width: 100%;
+    max-width: var(--site-width);
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    margin: 0 auto;
+
+    @media (min-width: 880px) {
+        padding-left: 4.5rem;
+        padding-right: 4.5rem;
+    }
+}
+
 /* clearfix
 ----------------------------------------------------------------------------- */
 
